# rust-zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
configuration/: base.yaml
scripts/: build_image.sh  init_db.sh  udeps.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
